# QuicRemote

./: .gitignore  CLAUDE.md  Directory.Build.props  Directory.Build.targets  QuicRemote.sln  README.md
docs/superpowers/plans/: 2026-03-21-quicremote-phase1.md  2026-03-21-quicremote-phase2.md  2026-03-21-quicremote-phase3.md  2026-03-22-quicremote-phase4.md
docs/superpowers/specs/: 2026-03-21-quicremote-design.md
src/QuicRemote.Client/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  QuicRemote.Client.csproj
src/QuicRemote.Client/Controls/: RemoteDisplay.xaml.cs
src/QuicRemote.Client/Services/: ClientService.cs  SettingsService.cs
src/QuicRemote.Client/ViewModels/: ConnectViewModel.cs  SettingsViewModel.cs
src/QuicRemote.Core/: QuicRemote.Core.csproj
src/QuicRemote.Core/Control/: CoordinateMapper.cs  RemoteControlService.cs
src/QuicRemote.Core/Media/: CaptureWrapper.cs  DecoderWrapper.cs  EncoderWrapper.cs  InputWrapper.cs  NativeMethods.cs
src/QuicRemote.Core/Session/: ConnectionState.cs  SessionContext.cs  SessionManager.cs
src/QuicRemote.Host/: App.xaml  App.xaml.cs  Converters.cs  LocalizeExtension.cs  MainWindow.xaml  MainWindow.xaml.cs  QuicRemote.Host.csproj
src/QuicRemote.Host/Resources/: Strings.Designer.cs  Strings.en-US.resx  Strings.resx
src/QuicRemote.Host/Services/: HostService.cs  LocalizationService.cs  SettingsService.cs  TrayIconService.cs
src/QuicRemote.Host/ViewModels/: MainViewModel.cs
src/QuicRemote.Native/: CMakeLists.txt
src/QuicRemote.Native/include/: quicremote.h
src/QuicRemote.Native/internal/: capture.h  d3d_utils.h  decoder.h  encoder.h  input.h
src/QuicRemote.Native/src/: audio.cpp  capture.cpp  d3d_utils.cpp  decoder.cpp  dllmain.cpp  encoder.cpp  exports.cpp  input.cpp
src/QuicRemote.Network/: QuicRemote.Network.csproj
src/QuicRemote.Network/Protocol/: ControlMessages.cs  DisplayConfigMessage.cs  Message.cs  MessageSerializer.cs  MessageTypes.cs  SessionMessages.cs
src/QuicRemote.Network/Quic/: QuicConnection.cs  QuicListener.cs  QuicStream.cs
tests/QuicRemote.Core.Tests/: CaptureWrapperTests.cs  ControlServiceTests.cs  EncoderDecoderTests.cs  InputWrapperTests.cs  NativeDllIntegrationTests.cs  NativeMethodsTests.cs  QuicRemote.Core.Tests.csproj  SessionManagerTests.cs
tests/QuicRemote.Integration.Tests/: IntegrationTests.cs  QuicDebugTest.cs  QuicRemote.Integration.Tests.csproj  QuicStreamDiagnostic.cs
tests/QuicRemote.Network.Tests/: ProtocolTests.cs  QuicRemote.Network.Tests.csproj
